# evening

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  evening.sln
evening/: evening.vcxproj
evening/include/: evening.hpp
include/: evening.hpp
include/evening/: events.hpp
src/: evening.vcxproj  events.cpp
tests/: CMakeLists.txt  container.cpp  main.cpp  subscriber.cpp  subscription.cpp  tests.vcxproj
